--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src = https://www.linea.org.br/wp-content/themes/LIneA/imagens/logo-header.png width=100 style=\"padding: 30px\"> \n",
-    "<img align=\"left\" src = https://cdn2.webdamdb.com/1280_c3PXjCZbPM23.png width=180> <!-- style=\"padding: 20px\"--> \n",
+    "<img align=\"left\" src = \"images/linea.png\" width=100 style=\"padding: 30px\"> \n",
+    "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 20px\"> \n",
     "\n",
     "# Photo-z Server - Tutorial Notebook\n",
-    "- **Contact author**: [Julia Gschwend](mailto:julia@linea.org.br)\n",
-    "- **Last verified run**: 2023-01-16 <br>\n",
-    "\n"
+    "- Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
+    "\n",
+    "- Last verified run: 2023-01-16 <br>"
    ]
   },
   {
@@ -29,7 +29,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<a class=\"anchor\" id=\"intro\"></a>\n",
     "## 0. Introduction \n",
@@ -56,7 +58,7 @@
     "\n",
     "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type, on the Terminal:  \n",
     "\n",
-    "```shell\n",
+    "```\n",
     "$ pip install pz-server-lib \n",
     "``` \n",
     "\n",
@@ -64,13 +66,13 @@
     "\n",
     "Alternatively, if you have cloned the repository with:\n",
     "\n",
-    "```shell\n",
+    "```\n",
     "$ git clone https://github.com/linea-it/pz-server-lib.git  \n",
     "``` \n",
     "\n",
     "To install the API and its dependencies, type:\n",
     "\n",
-    "```shell\n",
+    "```\n",
     "$ python setup.py install\n",
     "```\n",
     "\n",
@@ -263,7 +265,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "search_results = pz_server.get_products_list(filters={\"product_type\": \"results\"}) # PZ Validation results\n",
@@ -278,7 +283,7 @@
     "\n",
     "---\n",
     "\n",
-    "Next, let's see examples of usage of the methods that starts with the preffixes \"get_\", \"display_\" and \"download_\" to retrieve data (or metadata), organized by product types. \n",
+    "Next, let's see examples of usage of the methods that starts with the preffixes `display_`,  `get_`, and `download_` to retrieve data (or metadata), organized by product types. \n",
     "\n"
    ]
   },
@@ -290,6 +295,10 @@
    "source": [
     "<a class=\"anchor\" id=\"spec\"></a>\n",
     "## 1. Spec-z Catalog \n",
+    "<div style=\"text-align: right\"> \n",
+    "<a href=\"#contents\">back to the top</a>\n",
+    "</div> \n",
+    "<p>\n",
     "\n",
     "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources and should be provided as a single file with tabular data to PZ Server's the upload tool. \n",
     "\n",
@@ -322,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get metadata of a given Spec-z Catalog "
+    "#### Display of a given Spec-z Catalog "
    ]
   },
   {
@@ -331,9 +340,11 @@
    "source": [
     "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page, or this way, using the Python API. \n",
     "\n",
-    "All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner and removing blank spaces, upper cases, and special charecters. \n",
+    "All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner (and removing blank spaces, upper cases, and special charecters). \n",
     "\n",
-    "The methods `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name** (remove # to try out different ways of providing the product id). "
+    "The method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table.\n",
+    "\n",
+    "In the example below, remove # to try out different ways of providing the product id. "
    ]
   },
   {
@@ -342,27 +353,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# metadata_specz_catalog = pz_server.get_product_metadata(<id number or internal name, str or int>) \n",
-    "# metadata_specz_catalog = pz_server.get_product_metadata(6) \n",
-    "# metadata_specz_catalog = pz_server.get_product_metadata(\"6\")  \n",
-    "metadata_specz_catalog = pz_server.get_product_metadata(\"6_true_redshifts\") \n",
+    "# metadata_specz_catalog = pz_server.display_product_metadata(<id number or internal name, str or int>) \n",
+    "# metadata_specz_catalog = pz_server.display_product_metadata(6) \n",
+    "# metadata_specz_catalog = pz_server.display_product_metadata(\"6\")  \n",
+    "metadata_specz_catalog = pz_server.display_product_metadata(\"6_true_redshifts\") \n",
     "metadata_specz_catalog"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As the previous \"get_\" methods, there is a correspondent \"display_\" method for the product metadata to show the same results, but as a table (convenient for use in Jupyter environment):  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server.display_product_metadata(\"6_true_redshifts\") "
    ]
   },
   {
@@ -371,17 +366,7 @@
    "source": [
     "#### Retrieve a given Spec-z Catalog \n",
     "\n",
-    "The methods `get_product()` returns the data stored under a given product **id**. For simple tabular data (product types: **Spec-z Catalog** and **Training Set**), the method returns an object of a class corresponding to the product type (classes: SpeczCatalog or TrainingSet), which are simple extensions of the class _pandas.DataFrame_ with some particular attributes and methods). Let's see an axample with a Spec-z Catalog:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "pd.__version__"
+    "The method `get_product()` returns the data stored under a given product **id** number or **internal_name** as an Astropy Table object (valid only for tabular data (e.g.: product types Spec-z Catalog and Training Set).   "
    ]
   },
   {
@@ -394,7 +379,31 @@
    "source": [
     "#specz_catalog = pz_server.get_product(<product id number or name>)\n",
     "specz_catalog = pz_server.get_product(6)\n",
-    "specz_catalog"
+    "specz_catalog.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For simple tabular data (product types: **Spec-z Catalog** and **Training Set**), the method returns an object of a class corresponding to the product type (classes: SpeczCatalog or TrainingSet), which are simple extensions of the class _pandas.DataFrame_ with some particular attributes and methods). Let's see an axample with a Spec-z Catalog:\n",
+    "\n",
+    "import pandas as pd\n",
+    "pd.__version__"
    ]
   },
   {
@@ -502,7 +511,11 @@
    "source": [
     "<a class=\"anchor\" id=\"train\"></a>\n",
     "## 2. Training Sets \n",
-    "\n",
+    "<div style=\"text-align: right\"> \n",
+    "<a href=\"#contents\">back to the top</a>\n",
+    "</div> \n",
+    "<p>\n",
+    "    \n",
     "In the context of the PZ Server, Training Sets are defined as the product of matching (spatially) a given Spec-z Catalog (single survey or compilation) to the photometric data, in this case, the LSST Objects Catalog. The PZ Server API offers a tool called _Training Set Maker_ for users to build customized Training Sets based on the Spec-z Catalogs available. Please see the companion Jupyter Notebook `pz_tsm_tutorial.ipynb` for details.   \n",
     "\n",
     "\n",
@@ -617,7 +630,11 @@
    "source": [
     "<a class=\"anchor\" id=\"valid\"></a>\n",
     "## 3. Photo-z Validation Results\n",
-    "\n",
+    "<div style=\"text-align: right\"> \n",
+    "<a href=\"#contents\">back to the top</a>\n",
+    "</div> \n",
+    "<p>\n",
+    "    \n",
     "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar, or .tar.gz) before uploading it to the Photo-z Server.   \n",
     "\n",
     "#### List Validation Results available on PZ Server"
@@ -680,7 +697,11 @@
    "metadata": {},
    "source": [
     "<a class=\"anchor\" id=\"pz_tables\"></a>\n",
-    "## 4. Photo-z Tables "
+    "## 4. Photo-z Tables \n",
+    "<div style=\"text-align: right\"> \n",
+    "<a href=\"#contents\">back to the top</a>\n",
+    "</div> \n",
+    "<p>"
    ]
   },
   {
