clean experimental cells

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -123,6 +123,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"5d63310ab894f1096ba9a3816edef12c455c5af6\", host=\"pz-dev\") # temporary host for test phase  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,15 +380,8 @@
    "source": [
     "#specz_catalog = pz_server.get_product(<product id number or name>)\n",
     "specz_catalog = pz_server.get_product(6)\n",
-    "specz_catalog.to_pandas()"
+    "specz_catalog # .to_pandas()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -406,39 +408,6 @@
    "source": [
     "specz_catalog.product_id"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from pz_server.catalog import SpeczCatalog\n",
-    "specz_catalog = SpeczCatalog(6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
