clean notebook and comment functions that are still under construction

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieve a given Spec-z Catalog \n",
+    "#### Retrieve a given Spec-z Catalog - UNDER CONSTRUCTION\n",
     "\n",
     "The method `get_product()` returns the data stored under a given product **id** number or **internal_name** as an Astropy Table object (valid only for tabular data (e.g.: product types Spec-z Catalog and Training Set).   "
    ]
@@ -370,16 +370,9 @@
    "outputs": [],
    "source": [
     "#specz_catalog = pz_server.get_product(<product id number or name>)\n",
-    "specz_catalog = pz_server.get_product(6)\n",
-    "specz_catalog # .to_pandas()"
+    "#specz_catalog = pz_server.get_product(6)\n",
+    "#specz_catalog # .to_pandas()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -397,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog.product_id"
+    "#specz_catalog.product_id"
    ]
   },
   {
@@ -413,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog.describe()"
+    "#specz_catalog.describe()"
    ]
   },
   {
@@ -429,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog.plot()"
+    "#specz_catalog.plot()"
    ]
   },
   {
@@ -438,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog.product_id"
+    "#specz_catalog.product_id"
    ]
   },
   {
@@ -447,15 +440,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog.attrs[\"prod_type\"]"
+    "#specz_catalog.attrs[\"prod_type\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -540,8 +526,8 @@
    },
    "outputs": [],
    "source": [
-    "train_set = pz_server.get_product(9)\n",
-    "train_set"
+    "#train_set = pz_server.get_product(9)\n",
+    "#train_set"
    ]
   },
   {
@@ -557,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set.describe()"
+    "#train_set.describe()"
    ]
   },
   {
@@ -573,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set.plot(mag_name=\"mag_i\", redshift_name=\"z_true\")"
+    "#train_set.plot(mag_name=\"mag_i\", redshift_name=\"z_true\")"
    ]
   },
   {
@@ -682,9 +668,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pz",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pz"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
