change notebook structure and update text, prepare for oop

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -16,16 +16,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<a class=\"anchor\" id=\"contents\"></a>\n",
     "#### Notebook contents\n",
     "\n",
-    "0. [Introduction](#intro) \n",
-    "1. [Spec-z Catalogs](#spec)\n",
-    "2. [Training Sets](#train)\n",
-    "3. [Photo-z Validation Results](#valid)\n",
-    "4. [Photo-z Tables](#pz_tables)"
+    "- [Introduction](#intro) \n",
+    "- [Get basic info from PZ Server](#basic-info)\n",
+    "- [How to display the metadata of a data product](#metadata)\n",
+    "- [How to download data products as .zip files](#download-zip)  \n",
+    "- [How to retrieve contents of data products (work on memory)](#retrieve-contents)\n",
+    "    - [Spec-z Catalogs](#spec)\n",
+    "    - [Training Sets](#train)\n",
+    "    - [Photo-z Validation Results](#valid)\n",
+    "    - [Photo-z Tables](#pz_tables)"
    ]
   },
   {
@@ -34,19 +40,21 @@
     "tags": []
    },
    "source": [
+    "<div style=\"text-align: right\"><a href=\"#contents\">back to the top</a></div> \n",
     "<a class=\"anchor\" id=\"intro\"></a>\n",
-    "## 0. Introduction \n",
-    "<div style=\"text-align: right\"> \n",
-    "<a href=\"#contents\">back to the top</a>\n",
-    "</div> \n",
-    "<p>\n",
-    "    \n",
-    "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website https://pz-server.linea.org.br/ (during the development phase, a test environment is available at https://pz-server-dev.linea.org.br/). There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
     "\n",
-    "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. \n",
+    "## Introduction "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website [pz-server.linea.org.br](https://pz-server.linea.org.br/) (during the development phase, a test environment is available at [pz-server-dev.linea.org.br](https://pz-server-dev.linea.org.br/). There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
     "\n",
-    "For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  \n",
-    "\n"
+    "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  "
    ]
   },
   {
@@ -55,7 +63,7 @@
    "source": [
     "### Installation\n",
     "\n",
-    "#### Via pip\n",
+    "**Using pip**\n",
     "\n",
     "The PZ Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type, on the Terminal:  \n",
     "\n",
@@ -63,7 +71,7 @@
     "$ pip install pz-server-lib \n",
     "``` \n",
     "\n",
-    "#### Via setup.py \n",
+    "**Using setup.py**  \n",
     "\n",
     "Alternatively, if you have cloned the repository with:\n",
     "\n",
@@ -123,11 +131,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"6c5035393d4153b1996481092e31578130f9f8a3\", host=\"pz-dev\") # temporary host for test phase  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get basic info from PZ Server\n",
+    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div> \n",
+    "<a class=\"anchor\" id=\"basic-info\"></a>\n",
     "\n",
+    "## Get basic info from PZ Server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The Python object `pz_server` just created above can provide access to data and metadata stored in the PZ Server. It also brings useful methods for users to navigate through the available contents. The methods with the preffix \"get_\" return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically (see detaials on the [API documentation page](https://linea-it.github.io/pz-server-lib/html/index.html)). Those with the preffix \"display_\" just show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) (optimized for Jupyter Notebook). For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
@@ -271,12 +296,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
+    "<a class=\"anchor\" id=\"metadata\"></a>\n",
     "\n",
+    "## How to display the metadata of a data product\n",
     "\n",
-    "---\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page or using the Python API. All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner (and removing blank spaces, upper cases, and special charecters). \n",
     "\n",
-    "Next, let's see examples of usage of the methods that starts with the preffixes `display_`,  `get_`, and `download_` to retrieve data (or metadata), organized by product types. \n",
-    "\n"
+    "The `PzServer`'s method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table.\n",
+    "\n",
+    "In the example below, remove # to try out different ways of providing the product id. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# metadata_specz_catalog = pz_server.display_product_metadata(<id number or internal name, str or int>) \n",
+    "# metadata_specz_catalog = pz_server.display_product_metadata(8) \n",
+    "# metadata_specz_catalog = pz_server.display_product_metadata(\"8\")  \n",
+    "metadata_specz_catalog = pz_server.display_product_metadata(\"8_dp0_tiny_ztrue\") \n",
+    "metadata_specz_catalog"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
+    "\n",
+    "<a class=\"anchor\" id=\"download-zip\"></a>\n",
+    "## How to download data products as .zip files\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To download any data product stored in the PZ Server, use the `PzServer`'s method `download_product` informing the produtc's **id** number (or **internal_name**) and pathe to where it will be saved (default is the current directory). This method downloads a compressed .zip file which contais all the files uploaded by the user, including data, anmciliary files and description files. Let's try it with a small data product. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.download_product(8, save_in=\".\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>     \n",
+    "<a class=\"anchor\" id=\"retrieve-contents\"></a>\n",
+    "\n",
+    "## How to retrieve contents of data products (work on memory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another feature of the PZ Server API is to retrieve the contents of a given data product and atribute it to a variable in Python code. This feature is available only for tabular data (product types: **Spec-z Catalog** and **Training Set**). Let's see an example with the same data product as shown above.      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specz_catalog = pz_server.get_product(8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div> \n",
+    "<a class=\"anchor\" id=\"prod-types\"></a>\n",
+    "\n",
+    "## Product types\n",
+    "\n",
+    "The PZ Server API provides Python classes with useful methods to handle particular product types.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.display_product_types()"
    ]
   },
   {
@@ -285,13 +408,18 @@
     "tags": []
    },
    "source": [
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
     "<a class=\"anchor\" id=\"spec\"></a>\n",
-    "## 1. Spec-z Catalog \n",
-    "<div style=\"text-align: right\"> \n",
-    "<a href=\"#contents\">back to the top</a>\n",
-    "</div> \n",
-    "<p>\n",
     "\n",
+    "### Spec-z Catalog "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
     "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources and should be provided as a single file with tabular data to PZ Server's the upload tool. \n",
     "\n",
     "Mandatory columns: \n",
@@ -324,32 +452,6 @@
    "metadata": {},
    "source": [
     "#### Display metadata of a given Spec-z Catalog "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page, or this way, using the Python API. \n",
-    "\n",
-    "All data products stored on PZ Server are identified by a unique number, the product **id** number, or by a _string_ called **internal_name**, which is created automatically by concatenating the product **id** to the product name given by its owner (and removing blank spaces, upper cases, and special charecters). \n",
-    "\n",
-    "The method `get_product_metadata()` returns a dictionary with the attibutes stored in the PZ Server about a given data product identified by its **id** number or **internal_name**. For use in a Jupyter notebook, the equivalent `display_product_metadata()` shows the results in a formated table.\n",
-    "\n",
-    "In the example below, remove # to try out different ways of providing the product id. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# metadata_specz_catalog = pz_server.display_product_metadata(<id number or internal name, str or int>) \n",
-    "# metadata_specz_catalog = pz_server.display_product_metadata(6) \n",
-    "# metadata_specz_catalog = pz_server.display_product_metadata(\"6\")  \n",
-    "metadata_specz_catalog = pz_server.display_product_metadata(\"6_true_redshifts\") \n",
-    "metadata_specz_catalog"
    ]
   },
   {
@@ -447,12 +549,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
+    "\n",
     "<a class=\"anchor\" id=\"train\"></a>\n",
-    "## 2. Training Sets \n",
-    "<div style=\"text-align: right\"> \n",
-    "<a href=\"#contents\">back to the top</a>\n",
-    "</div> \n",
-    "<p>\n",
+    "### Training Sets \n",
     "    \n",
     "In the context of the PZ Server, Training Sets are defined as the product of matching (spatially) a given Spec-z Catalog (single survey or compilation) to the photometric data, in this case, the LSST Objects Catalog. The PZ Server API offers a tool called _Training Set Maker_ for users to build customized Training Sets based on the Spec-z Catalogs available. Please see the companion Jupyter Notebook `pz_tsm_tutorial.ipynb` for details.   \n",
     "\n",
@@ -566,12 +666,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
+    "\n",
     "<a class=\"anchor\" id=\"valid\"></a>\n",
-    "## 3. Photo-z Validation Results\n",
-    "<div style=\"text-align: right\"> \n",
-    "<a href=\"#contents\">back to the top</a>\n",
-    "</div> \n",
-    "<p>\n",
+    "### Photo-z Validation Results\n",
     "    \n",
     "Validation Results are the outputs of any photo-z algorithm applied on a Validation Set. The format and number of files of this data product are strongly dependent on the algorithm used to create it, so there are no constraints on these two parameters. In the case of multiple files, for instance, if the user includes the results of training procedures (e.g., neural nets weights, decision trees files, or any machine learning by-product) or additional files (SED templates, filter transmission curves, theoretical magnitudes grid, Bayesian priors, etc.), it will be required to put all files together in a single compressed file (.zip or .tar, or .tar.gz) before uploading it to the Photo-z Server.   \n",
     "\n",
@@ -634,12 +732,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"text-align: right\">  <a href=\"#contents\">back to the top</a> </div> \n",
+    "\n",
     "<a class=\"anchor\" id=\"pz_tables\"></a>\n",
-    "## 4. Photo-z Tables \n",
-    "<div style=\"text-align: right\"> \n",
-    "<a href=\"#contents\">back to the top</a>\n",
-    "</div> \n",
-    "<p>"
+    "### Photo-z Tables "
    ]
   },
   {
@@ -668,9 +764,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pz",
    "language": "python",
-   "name": "python3"
+   "name": "pz"
   },
   "language_info": {
    "codemirror_mode": {
